--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"
     />
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>Twtchr</title>
   </head>
   <body>
     <div id="root"></div>
